--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="GRAGGL: Identify the Suspect based on their Discord messages."
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
